--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <a class="socialmedia-buttons" href="mailto: prasanthramaswamy01@gmail.com"><i class="fas fa-envelope fa-3x"></i></a>
     <br>
     <hr style="width: 25%;">
-    <p>&copy; Copyright 2020 FarmFresh</p>
+    <p>&copy; Copyright <script>document.write(new Date().getFullYear());</script> FarmFresh</p>
   </section>
 
 
